Updating plans to include more stuff

--- a/_posts/2023-10-6-plan.md
+++ b/_posts/2023-10-6-plan.md
@@ -7,17 +7,34 @@ description: Detailed plan for our passion project
 type: plans
 courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
 ---
+
+### Week plan
+Setup everything for the passion project
+- Monday: Brainstorm possible Passion Project ideas and settle on what we want to do
+- Tuesday: Share frontend and backend repos, start planning out frontend and backend design
+- Wednesday: Start working on AWS server, start frontend design on Canva
+- Thursday: Continue working on Wednesday stuff, start working on backend template
+- Friday: Continue working on things from Thursday
+
+### Pair Planning Meeting
+- Update everything you worked on by git pushing onto our frontend repository as a template for now. 
+- Bring charged laptop everyday to class to work on code. 
+- Use Github Pages and AWS to run our servers and host our project. Use VSCode to code our project. 
+- Message through Discord to communicate project updates or questions.
+- Run make commands to build and test blog locally, before pushing changes to GitHub pages.
+- Let everyone know when committing things, don't do it all at once commit every once in a while
+
 ### Weather App Project Plan 
-We decided to make a Weather App because of its practical use and real life application. The idea is to display the temperature and have a background that matches the weather conditions. We wanted to challenge ourselves to capture the temperature in real time, while also displaying the forecast.
+We decided to make a Weather App because of its practical use and real life application. The idea is to display the temperature, humity, and precipitation and have a background that matches the weather conditions. We wanted to challenge ourselves to capture the temperature in real time, while also displaying the forecast.
 
 ### Background
 
 Initial concepts:
 -Aiden
-    -Create Plan
+    - Work on frontend design, write plan
 -Peyton
-    -Create Plan
+    - Work on frontend design, write plan
 -Austin
-    -
--David
-    -
+    - AWS server startup, weather API
+-David 
+    - AWS server startup, weather API
