--- a/_posts/2023-10-6-plan.md
+++ b/_posts/2023-10-6-plan.md
@@ -27,6 +27,9 @@ Setup everything for the passion project
 ### Weather App Project Plan 
 We decided to make a Weather App because of its practical use and real life application. The idea is to display the temperature, humity, and precipitation and have a background that matches the weather conditions. We wanted to challenge ourselves to capture the temperature in real time, while also displaying the forecast.
 
+Update: 10/10/2023
+We want to turn the weather app into a multi-tooled app that has a lot of useful everyday tools. For example, we want to add an interactive calendar where users can add upcoming events, a to-do list, and more. We also want to add a login/signup system so each user can have their own unique account. 
+
 ### Background
 
 Initial concepts:
