--- a/_notebooks/2023-10-16-To-Do-List.ipynb
+++ b/_notebooks/2023-10-16-To-Do-List.ipynb
@@ -17,9 +17,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tasks:\n",
+      " - WORK (Due: 10/17)\n",
+      " - HW (Due: 10/18)\n",
+      "To-Do List\n",
+      "Add Task\n",
+      "Remove Task\n",
+      "Show Tasks\n",
+      "Close\n",
+      "Invalid choice, please choose either Add/Remove/Show/Close\n",
+      "To-Do List\n",
+      "Add Task\n",
+      "Remove Task\n",
+      "Show Tasks\n",
+      "Close\n"
+     ]
+    }
+   ],
    "source": [
     "tasks = {}\n",
     "def addTask(taskName, dueDate):\n",
@@ -65,8 +86,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
