Updating tangibles and plan with meeting notes

--- a/_posts/2023-10-6-plan.md
+++ b/_posts/2023-10-6-plan.md
@@ -30,6 +30,14 @@ We decided to make a Weather App because of its practical use and real life appl
 Update: 10/10/2023
 We want to turn the weather app into a multi-tooled app that has a lot of useful everyday tools. For example, we want to add an interactive calendar where users can add upcoming events, a to-do list, and more. We also want to add a login/signup system so each user can have their own unique account. 
 
+Update: 10/17/2023
+Besides just all these user interactions we also want to add our own API of some sort: maybe like a cookbook of different popular recipes. That means our project will now have:
+- Third party API
+- Our own API
+- User interaction
+- Frontend with CSS and JS
+- Backend with Python and JS
+
 ### Background
 
 Initial concepts:
