Weather third party API

--- a/_notebooks/2023-10-16-To-Do-List.ipynb
+++ b/_notebooks/2023-10-16-To-Do-List.ipynb
@@ -24,15 +24,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tasks:\n",
-      " - WORK (Due: 10/17)\n",
-      " - HW (Due: 10/18)\n",
+      "To-Do List\n",
+      "Add Task\n",
+      "Remove Task\n",
+      "Show Tasks\n",
+      "Close\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task 'Finish AWS Deployment' added with due date 10/18.\n",
       "To-Do List\n",
       "Add Task\n",
       "Remove Task\n",
       "Show Tasks\n",
       "Close\n",
-      "Invalid choice, please choose either Add/Remove/Show/Close\n",
+      "Tasks:\n",
+      " - Finish AWS Deployment (Due: 10/18)\n",
+      "To-Do List\n",
+      "Add Task\n",
+      "Remove Task\n",
+      "Show Tasks\n",
+      "Close\n",
+      "Task 'AWS Deployment' not found.\n",
+      "To-Do List\n",
+      "Add Task\n",
+      "Remove Task\n",
+      "Show Tasks\n",
+      "Close\n",
+      "Tasks:\n",
+      " - Finish AWS Deployment (Due: 10/18)\n",
+      "To-Do List\n",
+      "Add Task\n",
+      "Remove Task\n",
+      "Show Tasks\n",
+      "Close\n",
+      "Task 'Finish AWS Deployment' removed.\n",
+      "To-Do List\n",
+      "Add Task\n",
+      "Remove Task\n",
+      "Show Tasks\n",
+      "Close\n",
+      "You have no tasks.\n",
       "To-Do List\n",
       "Add Task\n",
       "Remove Task\n",
