--- a/_notebooks/2023-10-17-calendar.ipynb
+++ b/_notebooks/2023-10-17-calendar.ipynb
@@ -8,8 +8,8 @@
     "toc: true\n",
     "comments: true\n",
     "layout: \n",
-    "title: To-Do List\n",
-    "description: App where user can keep track of their tasks.\n",
+    "title: Calendar\n",
+    "description: Calendar Template\n",
     "type: plans\n",
     "courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }\n",
     "---"
@@ -17,9 +17,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calendar for October 2023:\n",
+      "\n",
+      "    October 2023\n",
+      "Mo Tu We Th Fr Sa Su\n",
+      "                   1\n",
+      " 2  3  4  5  6  7  8\n",
+      " 9 10 11 12 13 14 15\n",
+      "16 17 18 19 20 21 22\n",
+      "23 24 25 26 27 28 29\n",
+      "30 31\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import calendar\n",
     "\n",
@@ -44,8 +62,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
