--- a/_posts/2023-10-24-ToDoList.md
+++ b/_posts/2023-10-24-ToDoList.md
@@ -1,3 +1,14 @@
+---
+toc: true
+comments: true
+layout: 
+title: To Do List
+description: To Do List for Passion Project
+type: plans
+courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
+---
+
+
 <!DOCTYPE html>
 <html>
 <head>
