--- a/_posts/2023-10-24-ToDoList.md
+++ b/_posts/2023-10-24-ToDoList.md
@@ -8,8 +8,6 @@ type: plans
 courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
 ---
 
-
-<!DOCTYPE html>
 <html>
 <head>
   <style>
@@ -117,6 +115,13 @@ courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
     .addBtn:hover {
         background-color: #bbb;
     }
+
+    .date-input {
+      width: 20%;
+      padding: 10px;
+      float: left;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
@@ -124,6 +129,8 @@ courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
 <div id="myDIV" class="header">
   <h2>To Do List</h2>
   <input type="text" id="myInput" placeholder="Title...">
+  <!-- Add a date input field -->
+  <input type="date" id="myDate" class="date-input" placeholder="Date...">
   <span onclick="newElement()" class="addBtn">Add</span>
 </div>
 
@@ -145,7 +152,8 @@ list.addEventListener('click', function(ev) {
 function newElement() {
   var li = document.createElement("li");
   var inputValue = document.getElementById("myInput").value;
-  var t = document.createTextNode(inputValue);
+  var dateValue = document.getElementById("myDate").value; // Get the date input value
+  var t = document.createTextNode(inputValue + " (Due: " + dateValue + ")");
   li.appendChild(t);
   if (inputValue === '') {
     alert("You must write something!");
@@ -153,6 +161,7 @@ function newElement() {
     document.getElementById("myUL").appendChild(li);
   }
   document.getElementById("myInput").value = "";
+  document.getElementById("myDate").value = ""; // Clear the date input value
 
   var span = document.createElement("SPAN");
   var txt = document.createTextNode("\u00D7");
