Adding some css to todo list

--- a/_posts/2023-10-24-ToDoList.md
+++ b/_posts/2023-10-24-ToDoList.md
@@ -20,60 +20,62 @@ courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
         padding: 0;
     }
 
-    ul li {
-        cursor: pointer;
-        position: relative;
-        padding: 12px 8px 12px 40px;
-        background: #eee;
-        font-size: 18px;
-        transition: 0.2s;
+  ul li {
+    cursor: pointer;
+    position: relative;
+    padding: 10px;
+    background: #f2f2f2;
+    font-size: 16px;
+    transition: 0.2s;
+    margin: 10px 0; /* Add spacing between items */
+    border: 1px solid #ddd; /* Add a border around each item */
+    border-radius: 5px; /* Add rounded corners */
+    display: flex; /* Make the to-do items a flex container */
+    justify-content: space-between; /* Align items horizontally */
+    align-items: center; /* Align items vertically */
+  }
 
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-    }
+  ul li:nth-child(odd) {
+    background: #f9f9f9;
+  }
 
-    ul li:nth-child(odd) {
-        background: #f9f9f9;
-    }
+  ul li:hover {
+    background: #ddd;
+  }
 
-    ul li:hover {
-        background: #ddd;
-    }
+  ul li.checked {
+    background: #888;
+    color: #fff;
+    text-decoration: line-through;
+  }
 
-    ul li.checked {
-        background: #888;
-        color: #fff;
-        text-decoration: line-through;
-    }
-    ul li.checked::before {
-        content: '';
-        position: absolute;
-        border-color: #fff;
-        border-style: solid;
-        border-width: 0 2px 2px 0;
-        top: 10px;
-        left: 16px;
-        transform: rotate(45deg);
-        height: 15px;
-        width: 7px;
-    }
+  ul li.checked::before {
+    content: '';
+    position: absolute;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 7px;
+    left: 12px;
+    transform: rotate(45deg);
+    height: 10px;
+    width: 5px;
+  }
 
-   
-    .close {
-        position: absolute;
-        right: 0;
-        top: 0;
-        padding: 12px 16px 12px 16px;
-        cursor: pointer; 
-    }
+  /* Add styles for the close button */
+  .close {
+    padding: 5px 10px;
+    cursor: pointer;
+    background-color: #f44336;
+    color: white;
+    border-radius: 5px; /* Add rounded corners */
+    margin-left: 10px; /* Add space between the item and the close button */
+  }
 
-    .close:hover {
-        background-color: #f44336;
-        color: white;
-    }
-
+  .close:hover {
+    background-color: #f44336;
+    color: white;
+  }
     
     .header {
         background-color: #FFA500;
@@ -122,6 +124,11 @@ courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
       float: left;
       font-size: 16px;
     }
+
+  .due-date {
+    font-size: 16px;
+    margin-right: 10px; /* Add space between the task and date */
+  }
   </style>
 </head>
 <body>
