Adding css to todo list, push events to local storage

--- a/_posts/2023-10-24-ToDoList.md
+++ b/_posts/2023-10-24-ToDoList.md
@@ -20,62 +20,70 @@ courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
         padding: 0;
     }
 
-  ul li {
-    cursor: pointer;
-    position: relative;
-    padding: 10px;
-    background: #f2f2f2;
-    font-size: 16px;
-    transition: 0.2s;
-    margin: 10px 0; /* Add spacing between items */
-    border: 1px solid #ddd; /* Add a border around each item */
-    border-radius: 5px; /* Add rounded corners */
-    display: flex; /* Make the to-do items a flex container */
-    justify-content: space-between; /* Align items horizontally */
-    align-items: center; /* Align items vertically */
-  }
+    ul li {
+      cursor: pointer;
+      position: relative;
+      padding: 12px 8px 12px 40px;
+      background: #eee;
+      font-size: 18px;
+      transition: 0.2s;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      display: flex; /* Make the task bar a flex container */
+      justify-content: space-between; /* Align items horizontally */
+      align-items: center; /* Align items vertically */
+    }
 
-  ul li:nth-child(odd) {
-    background: #f9f9f9;
-  }
+    ul li:nth-child(odd) {
+      background: #f9f9f9;
+    }
 
-  ul li:hover {
-    background: #ddd;
-  }
+    ul li:hover {
+      background: #ddd;
+    }
 
-  ul li.checked {
-    background: #888;
-    color: #fff;
-    text-decoration: line-through;
-  }
+    ul li.checked {
+      background: #888;
+      color: #fff;
+      text-decoration: line-through;
+    }
 
-  ul li.checked::before {
-    content: '';
-    position: absolute;
-    border-color: #fff;
-    border-style: solid;
-    border-width: 0 2px 2px 0;
-    top: 7px;
-    left: 12px;
-    transform: rotate(45deg);
-    height: 10px;
-    width: 5px;
-  }
+    ul li.checked::before {
+      content: '';
+      position: absolute;
+      border-color: #fff;
+      border-style: solid;
+      border-width: 0 2px 2px 0;
+      top: 10px;
+      left: 16px;
+      transform: rotate(45deg);
+      height: 15px;
+      width: 7px;
+    }
 
-  /* Add styles for the close button */
-  .close {
-    padding: 5px 10px;
-    cursor: pointer;
-    background-color: #f44336;
-    color: white;
-    border-radius: 5px; /* Add rounded corners */
-    margin-left: 10px; /* Add space between the item and the close button */
-  }
+    /* Add styles for the delete button */
+    .delete {
+      padding: 12px;
+      cursor: pointer;
+      color: red;
+    }
 
-  .close:hover {
-    background-color: #f44336;
-    color: white;
-  }
+    .delete:hover {
+      background-color: #f9f9f9;
+    }
+
+    /* Add styles for the close button */
+    .close {
+      padding: 12px;
+      cursor: pointer;
+    }
+
+    .close:hover {
+      background-color: #f44336;
+      color: white;
+    }
     
     .header {
         background-color: #FFA500;
@@ -84,7 +92,6 @@ courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
         text-align: center;
     }
 
-    
     .header:after {
         content: "";
         display: table;
@@ -101,21 +108,33 @@ courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
         font-size: 16px;
     }
 
+        /* Styles for the input fields */
+    .input-container {
+      display: flex;
+      margin-bottom: 10px;
+    }
+
+    input[type="text"], input[type="date"] {
+      flex: 1;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+
     .addBtn {
-        padding: 10px;
-        width: 25%;
-        background: #d9d9d9;
-        color: #555;
-        float: left;
-        text-align: center;
-        font-size: 16px;
-        cursor: pointer;
-        transition: 0.3s;
-        border-radius: 0;
+      padding: 10px;
+      background: #d9d9d9;
+      color: #555;
+      text-align: center;
+      font-size: 16px;
+      cursor: pointer;
+      transition: 0.3s;
+      border-radius: 0;
     }
 
     .addBtn:hover {
-        background-color: #bbb;
+      background-color: #bbb;
     }
 
     .date-input {
@@ -132,51 +151,85 @@ courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
   </style>
 </head>
 <body>
+  <div id="myDIV" class="header">
+    <h2>To Do List</h2>
+    <input type="text" id="myInput" placeholder="Title...">
+    <!-- Add a date input field -->
+    <input type="date" id="myDate" class="date-input" placeholder="Date...">
+    <span onclick="newElement()" class="addBtn">Add</span>
+  </div>
+  <ul id="myUL"></ul>
 
-<div id="myDIV" class="header">
-  <h2>To Do List</h2>
-  <input type="text" id="myInput" placeholder="Title...">
-  <!-- Add a date input field -->
-  <input type="date" id="myDate" class="date-input" placeholder="Date...">
-  <span onclick="newElement()" class="addBtn">Add</span>
-</div>
+  <script>
+    var list = document.querySelector('ul');
+    list.addEventListener('click', function(ev) {
+      if (ev.target.className === 'delete') {
+        var div = ev.target.parentElement;
+        div.style.display = "none";
+        removeTask(ev.target.parentElement);
+        saveTasks();
+      } else if (ev.target.tagName === 'LI') {
+        ev.target.classList.toggle('checked');
+        saveTasks();
+      }
+    }, false);
 
-<ul id="myUL">
-</ul>
+    function newElement() {
+      var li = document.createElement("li");
+      var inputValue = document.getElementById("myInput").value;
+      var dateValue = document.getElementById("myDate").value;
+      var t = document.createTextNode(inputValue + " (Due: " + dateValue + ")");
+      li.appendChild(t);
+      var deleteButton = document.createElement("span");
+      deleteButton.className = "delete";
+      deleteButton.innerHTML = "\u00D7";
+      li.appendChild(deleteButton);
+      if (inputValue === '') {
+        alert("You must write something!");
+      } else {
+        document.getElementById("myUL").appendChild(li);
+      }
+      document.getElementById("myInput").value = "";
+      document.getElementById("myDate").value = "";
+      saveTasks();
+    }
 
-<script>
-var list = document.querySelector('ul');
-list.addEventListener('click', function(ev) {
-  if (ev.target.className === 'close') {
-    var div = ev.target.parentElement;
-    div.style.display = "none";
-  }
-  else if (ev.target.tagName === 'LI') {
-    ev.target.classList.toggle('checked');
-  }
-}, false);
+    function removeTask(task) {
+      task.remove();
+    }
 
-function newElement() {
-  var li = document.createElement("li");
-  var inputValue = document.getElementById("myInput").value;
-  var dateValue = document.getElementById("myDate").value; // Get the date input value
-  var t = document.createTextNode(inputValue + " (Due: " + dateValue + ")");
-  li.appendChild(t);
-  if (inputValue === '') {
-    alert("You must write something!");
-  } else {
-    document.getElementById("myUL").appendChild(li);
-  }
-  document.getElementById("myInput").value = "";
-  document.getElementById("myDate").value = ""; // Clear the date input value
+    function saveTasks() {
+      var tasks = document.querySelectorAll("ul li");
+      var taskData = [];
+      tasks.forEach(function(task) {
+        taskData.push({
+          text: task.innerText,
+          checked: task.classList.contains('checked')
+        });
+      });
+      localStorage.setItem("tasks", JSON.stringify(taskData));
+    }
 
-  var span = document.createElement("SPAN");
-  var txt = document.createTextNode("\u00D7");
-  span.className = "close";
-  span.appendChild(txt);
-  li.appendChild(span);
-}
-</script>
+    function loadTasks() {
+      var storedTasks = localStorage.getItem("tasks");
+      if (storedTasks) {
+        var tasks = JSON.parse(storedTasks);
+        tasks.forEach(function(taskData) {
+          var li = document.createElement("li");
+          li.innerText = taskData.text;
+          if (taskData.checked) {
+            li.classList.add('checked');
+          }
+          var deleteButton = document.createElement("span");
+          deleteButton.className = "delete";
+          deleteButton.innerHTML = "\u00D7";
+          li.appendChild(deleteButton);
+          document.getElementById("myUL").appendChild(li);
+        });
+      }
+    }
 
+    loadTasks();
+  </script>
 </body>
 </html>
