Combining todo list and calendar, changing all their css, making one event from one correlate with the other

--- a/_posts/2023-10-24-ToDoList.md
+++ b/_posts/2023-10-24-ToDoList.md
@@ -153,9 +153,8 @@ courses: { csse: {week: 1}, csp: {week: 1, categories: [4.A]}, csa: {week: 0} }
 <body>
   <div id="myDIV" class="header">
     <h2>To Do List</h2>
-    <input type="text" id="myInput" placeholder="Title...">
-    <!-- Add a date input field -->
-    <input type="date" id="myDate" class="date-input" placeholder="Date...">
+<input type="text" id="myInput" placeholder="Title..." autocomplete="off">
+<input type="date" id="myDate" class="date-input" placeholder="Date..." autocomplete="off">
     <span onclick="newElement()" class="addBtn">Add</span>
   </div>
   <ul id="myUL"></ul>
