Fixing todo and calendar bag

--- a/_posts/2023-10-25-combined.md
+++ b/_posts/2023-10-25-combined.md
@@ -459,12 +459,18 @@ function addEventToCalendar(title, dateValue) {
   eventDate.setUTCHours(0, 0, 0, 0); // Set time to midnight in UTC
 
   const dateString = `${eventDate.getUTCMonth() + 1}/${eventDate.getUTCDate()}/${eventDate.getUTCFullYear()}`;
+  const event = {
+    date: dateString,
+    title: title,
+  };
 
-  if (!events[dateString]) {
-    events[dateString] = [];
+  // Check if an event for this date already exists, if so, update the title
+  const existingEventIndex = events.findIndex(e => e.date === dateString);
+  if (existingEventIndex !== -1) {
+    events[existingEventIndex] = event;
+  } else {
+    events.push(event);
   }
-
-  events[dateString].push({ title: title });
 
   // Store the updated events in localStorage and update the calendar
   localStorage.setItem('events', JSON.stringify(events));
